--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <div class="modal"></div>
   <div id="root">not rendered</div>
   <script type="module" src="./App.jsx"></script>
 </body>
